trying to get rid of conflicts